# dali-react-native

./: .gitignore  ARCHITECTURE.md  App.js  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  build_deps.sh  bundle.js  download_deps.sh  index.js  measure_memory.sh  package-lock.json  package.json  run_log.txt  run_log_app_check.txt  run_log_bridge.txt  run_log_concurrent.txt  run_log_connection_tracker.txt  run_log_debug_fabric_ui.txt  run_log_debug_modules.txt  run_log_event_debug.txt  run_log_event_debug_2.txt  run_log_event_debug_3.txt  run_log_event_debug_4.txt  run_log_event_loop_fix.txt  run_log_event_verif.txt  run_log_executor_check.txt  run_log_executor_check_3.txt  run_log_final_verif_2.txt  run_log_fix_dom.txt  run_log_js_debug.txt  run_log_js_final_fix.txt  run_log_js_ready.txt  run_log_js_run_fix.txt  run_log_js_wrapper_debug.txt  run_log_jsi_thread_check.txt  run_log_main_exit_check.txt  run_log_mounting.txt  run_log_mounting_verbose.txt  (+22 more)
.claude/: settings.json
cmake/: FindHermes.cmake  FindReactNative.cmake
docs/: ARCHITECTURE.md  README_MAC.md  hermes-migration-plan.md  memory-benchmark-20260129-210949.md  memory-benchmark-report.md  memory_comparison.md
docs/memory_comparison/: mem_native_images.txt  mem_native_views.txt  mem_rn_images.txt  mem_rn_views.txt
native-benchmark/: CMakeLists.txt  main.cpp
native-benchmark/image-test/: main.cpp
native-benchmark/view-test/: main.cpp
rn-benchmark/image-test/: App.js
rn-benchmark/view-test/: App.js  index.js
scripts/: build_hermes.sh  memory-benchmark.sh  package-for-ubuntu.sh  test-topleft.js  ubuntu-build.sh
src/: DaliMountingManager.cpp  DaliMountingManager.h  DaliRenderer.cpp  DaliRenderer.h  DaliTextLayoutManager.cpp  DaliTextLayoutManager.h  DeviceInstanceManager.cpp  DeviceInstanceManager.h  TurboModuleRegistry.cpp  TurboModuleRegistry.h  UIManagerModule.cpp  UIManagerModule.h  main.cpp
src/components/: DaliImageComponent.cpp  DaliImageComponent.h  DaliTextComponent.cpp  DaliTextComponent.h  DaliViewComponent.cpp  DaliViewComponent.h
third_party_dependencies/build_react_native/: CMakeLists.txt  dummy.cpp
